force-app/main/default/objects/Flight_Schedule__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Destination_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Howrah</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Nagasaki</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Wuhan</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Islamabad</fullName>
            </value>
            <value>
                <fullName>Peshawar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>