force-app/main/default/objects/Flight_Schedule__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>Destination State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Destination_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
            </value>
            <value>
                <fullName>China State</fullName>
            </value>
            <value>
                <fullName>Japan State</fullName>
            </value>
            <value>
                <fullName>Sindh</fullName>
            </value>
            <value>
                <fullName>Balochistan</fullName>
            </value>
            <value>
                <fullName>Pakistan State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>