force-app/main/default/objects/Flight_Schedule__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(FLOOR(( Arrival_Date_Time__c - Departure_Date_Time__c )*24)&gt;9,
TEXT(FLOOR(( Arrival_Date_Time__c - Departure_Date_Time__c )*24)),
&quot;0&quot; &amp; TEXT(FLOOR(( Arrival_Date_Time__c - Departure_Date_Time__c )*24))) &amp;
 
&quot; &quot; &amp;&quot;Hours&quot;&amp; &quot; &quot;&amp;
IF(ROUND(MOD(( Arrival_Date_Time__c - Departure_Date_Time__c )*1440,60),0)&gt;9,
TEXT(ROUND(MOD(( Arrival_Date_Time__c - Departure_Date_Time__c )*1440,60),0)),
&quot;0&quot; &amp; TEXT(ROUND(MOD(( Arrival_Date_Time__c - Departure_Date_Time__c )*1440,60),0)))&amp;
 &quot; &quot; &amp;&quot;Minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>