force-app/main/default/objects/Flight_Schedule__c/fields/Source_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Source_Location_City__c</fullName>
    <label>Source Location City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source_Location_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Howrah</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Osaka</fullName>
            </value>
            <value>
                <fullName>Hiroshima</fullName>
            </value>
            <value>
                <fullName>Nagasaki</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Wuhan</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Lahore</fullName>
            </value>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Islamabad</fullName>
            </value>
            <value>
                <fullName>Peshawar</fullName>
            </value>
            <value>
                <fullName>Quetta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>