force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_Departure_DT_After_Arrival_DT.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Departure_DT_After_Arrival_DT</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_Date_Time__c  &lt;  Departure_Date_Time__c</errorConditionFormula>
    <errorMessage>Departure Date Time Cant be after Arrival Date Time</errorMessage>
</ValidationRule>