force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_same_Arrival_and_Departure_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_same_Arrival_and_Departure_Time</fullName>
    <active>true</active>
    <errorConditionFormula>TIMEVALUE( Arrival_Date_Time__c )  = 
 TIMEVALUE( Departure_Date_Time__c )</errorConditionFormula>
    <errorMessage>Arrival and Departure time cant be same</errorMessage>
</ValidationRule>