force-app/main/default/objects/Flight_Schedule__c/validationRules/Prevent_same_Source_and_Destination_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_same_Source_and_Destination_City</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Source_Location_City__c )   = 
   TEXT( Destination_City__c )</errorConditionFormula>
    <errorMessage>Same Source and Destination City..</errorMessage>
</ValidationRule>