force-app/main/default/objects/Flight_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Location_Country__c</columns>
    <columns>Source_Location_State__c</columns>
    <columns>Source_Location_City__c</columns>
    <columns>Destination_Country__c</columns>
    <columns>Destination_State__c</columns>
    <columns>Destination_City__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>